[package]
name = "nur_worker"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.0"
aws-sdk-s3 = "1.93.0"
log = "0.4.27"
tokio = { version = "1.45.1", default-features = false, features = [
    "macros",
    "rt",
    "rt-multi-thread",
] }
env_logger = "0.10.2"
flume = { version = "0.11.1", default-features = false, features = ["async"] }
async-compression = { version = "0.4.25", features = ["zstd", "tokio"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7.13", default-features = false, features = [
    "runtime",
    "with-uuid-1",
] }
uuid = { version = "1.17.0", features = ["v4"] }

[dependencies.wasmer]
version = "6.0.1"
default-features = false
features = [
    "compiler",
    "cranelift",
    "std",
    "sys",
    "sys-default",
    "wasmer-compiler-cranelift",
    "wasmparser",
    "wat",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
